--- a/config.yml
+++ b/config.yml
@@ -1,8 +1,6 @@
 BaseExperiment: &defaults
     seed: 42
-    #root_dir: !ENV ${FASTMRI_ROOT}
-    # root_dir: /home/wenqi/Data/FastMRI/
-    root_dir: /labspace/data/public/fastmri
+    root_dir: !ENV ${FASTMRI_ROOT}
     batch_size: 8
     use_fg_mask: False
     singlecoil_train_ds:
